<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtAreaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_area"
        android:textSize="25sp"
        android:paddingLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txtPerimeterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_perimeter"
        android:layout_below="@+id/txtAreaLabel"
        android:textSize="25sp"
        android:paddingTop="25dp"
        android:paddingLeft="20dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txtAreaValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_zero"
        android:paddingRight="80dp"
        android:paddingLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtPerimeterValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_zero"
        android:paddingRight="80dp"
        android:paddingLeft="20dp"
        android:paddingTop="25dp"
        android:layout_below="@+id/txtAreaValue"
        android:layout_alignParentEnd="true"
        android:textSize="25sp" />
</RelativeLayout>