<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context=".FragmentTop"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/txtHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_height"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp"
        android:paddingTop="25dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp" />

    <TextView
        android:id="@+id/txtWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_width"
        android:layout_below="@+id/txtHeight"
        android:layout_alignParentStart="true"
        android:textSize="25sp"
        android:paddingTop="20dp"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/btnCalc"
        android:textSize="25sp"
        android:gravity="right"
        android:layout_margin="5dp" />

    <EditText
        android:id="@+id/etWidth"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_below="@+id/etHeight"
        android:layout_alignStart="@+id/etHeight"
        android:textSize="25sp"
        android:width="250dp"
        android:gravity="right"
        android:layout_width="wrap_content"
        android:layout_alignEnd="@+id/etHeight" />

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_calculate"
        android:textSize="20sp"
        android:layout_below="@+id/etWidth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />
</RelativeLayout>
